Add db partition configuration option

--- a/charts/dataplane/templates/strimzi/connector.yaml
+++ b/charts/dataplane/templates/strimzi/connector.yaml
@@ -22,6 +22,9 @@ spec:
     database.dbname: "{{ $db.dbname }}"
     snapshot.new.tables: parallel
     tasks.max: "1"
+    {{- if and (hasKey $db "partitions") (ge (len $db.partitions) 1) }}
+    table.exclude.list: "{{- range $i, $p := $db.partitions -}}{{- if $i }},{{- end -}}{{ $p.source }}{{- end }}"
+    {{- end }}
     key.converter: io.confluent.connect.avro.AvroConverter
     key.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
     value.converter: io.confluent.connect.avro.AvroConverter
@@ -33,6 +36,43 @@ spec:
     transforms.reroute.type: io.debezium.transforms.ByLogicalTableRouter
     transforms.reroute.topic.regex: (.*)
     transforms.reroute.topic.replacement: cdc.$1
+{{- if and (hasKey $db "partitions") (ge (len $db.partitions) 1) }}
+{{- range $partition := $db.partitions }}
+{{- $partitionSource := required "partition source is required" $partition.source }}
+{{- $partitionSink := required "partition sink is required" $partition.sink }}
+---
+apiVersion: kafka.strimzi.io/v1beta2
+kind: KafkaConnector
+metadata:
+  name: {{ $fullName }}-{{ lower $db.servername }}-{{ lower $db.dbname }}-{{ $partitionSink }}
+  labels:
+    strimzi.io/cluster: {{ $fullName }}
+spec:
+  class: io.debezium.connector.postgresql.PostgresConnector
+  tasksMax: 1
+  config:
+    database.hostname: {{ $db.hostname }}
+    database.port: "{{ $db.port | default 5432 }}"
+    database.user: "${env:POSTGRES_CDC_USER}"
+    database.password: "${env:POSTGRES_CDC_PASS}"
+    database.server.name: "{{ $db.servername }}"
+    database.dbname: "{{ $db.dbname }}"
+    snapshot.new.tables: parallel
+    tasks.max: "1"
+    table.include.list: "{{ $partitionSource }}"
+    key.converter: io.confluent.connect.avro.AvroConverter
+    key.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
+    value.converter: io.confluent.connect.avro.AvroConverter
+    value.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
+    {{- if $db.signaling }}
+    signal.data.collection: debezium.signaling
+    {{- end }}
+    transforms: reroute
+    transforms.reroute.type: io.debezium.transforms.ByLogicalTableRouter
+    transforms.reroute.topic.regex: (.*)
+    transforms.reroute.topic.replacement: cdc.{{ $partitionSink }}
+{{- end }}
+{{- end }}
 {{- end }}
 ---
 apiVersion: kafka.strimzi.io/v1beta2
