--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -94,8 +94,8 @@ provisioner:
                   dbname: "{{ dataplane_pagila_db }}"
                   signaling: "{{ dataplane_pagila_signaling }}"
                   partitions:
-                    - source: "payments.*"
-                      sink: "payments"
+                    - source: "payment.*"
+                      sink: "payment"
             strimzi:
               connect:
                 image:
