--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -61,7 +61,8 @@
 
         - name: record source table data
           ansible.builtin.set_fact:
-            pagila_tables: "{{ _table_names | difference(['payment']) | list }}"
+            pagila_all_tables: "{{ _table_names | list }}"
+            pagila_target_tables: "{{ _table_names | reject('regex', '^payment_.*') }}"
           vars:
             _table_names: "{{ pagila_table_query.query_result | map(attribute='table_name') }}"
 
@@ -72,7 +73,7 @@
             login_user: "{{ pagila_user }}"
             login_password: "{{ pagila_pass }}"
             login_host: "{{ pagila_host }}"
-          loop: "{{ pagila_tables }}"
+          loop: "{{ pagila_all_tables }}"
           register: pagila_data_query
 
         - name: record pagila table data
@@ -117,7 +118,7 @@
                 login_password: "{{ warehouse_pass }}"
                 login_host: "{{ warehouse_host }}"
               vars:
-                warehouse_tables_expected: "{{ pagila_tables | map('map_format', 'pagila_%s') | list }}"
+                warehouse_tables_expected: "{{ pagila_target_tables | map('map_format', 'pagila_%s') | list }}"
                 warehouse_tables_found: "{{ warehouse_table_query.query_result | map(attribute='table_name') | list }}"
               register: warehouse_table_query
               retries: 20
@@ -129,7 +130,7 @@
               ansible.builtin.debug:
                 msg: "table diff=[{{ ', '.join(warehouse_tables_diff) }}]"
               vars:
-                warehouse_tables_expected: "{{ pagila_tables | map('map_format', 'pagila_%s') | list }}"
+                warehouse_tables_expected: "{{ pagila_target_tables| map('map_format', 'pagila_%s') | list }}"
                 warehouse_tables_found: "{{ warehouse_table_query.query_result | map(attribute='table_name') | list }}"
                 warehouse_tables_diff: "{{ warehouse_tables_expected | difference(warehouse_tables_found) }}"
 
@@ -168,7 +169,7 @@
             source_table_records: "{{ (pagila_data[source_table].query_result | list)[0].count }}"
           loop_control:
             label: "{{ source_table }}"
-          loop: "{{ (pagila_data.keys() | list) }}"
+          loop: "{{ (pagila_target_tables | list) }}"
           when: source_table_records > warehouse_table_records
 
     - name: verify metabase app database
