Add support for table partition rerouting (#36)

--- a/charts/dataplane/templates/strimzi/connector.yaml
+++ b/charts/dataplane/templates/strimzi/connector.yaml
@@ -3,11 +3,13 @@
 {{- $registryPort := .Values.registry.service.port -}}
 
 {{- range $db := .Values.cdc.postgres }}
+{{- $dbConnectorName := lower (printf "%s-%s-%s" $fullName $db.servername $db.dbname) }}
+{{- $dbSlotName := $dbConnectorName | replace "-" "_" }}
 ---
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaConnector
 metadata:
-  name: {{ $fullName }}-{{ lower $db.servername }}-{{ lower $db.dbname }}
+  name: {{ $dbConnectorName }}
   labels:
     strimzi.io/cluster: {{ $fullName }}
 spec:
@@ -21,7 +23,12 @@ spec:
     database.server.name: "{{ $db.servername }}"
     database.dbname: "{{ $db.dbname }}"
     snapshot.new.tables: parallel
+    slot.name: "{{ $dbSlotName }}"
+    plugin.name: pgoutput
     tasks.max: "1"
+    {{- if and (hasKey $db "partitions") (ge (len $db.partitions) 1) }}
+    table.exclude.list: "{{- range $i, $p := $db.partitions -}}{{- if $i }},{{- end -}}{{ $p.source }}{{- end }}"
+    {{- end }}
     key.converter: io.confluent.connect.avro.AvroConverter
     key.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
     value.converter: io.confluent.connect.avro.AvroConverter
@@ -33,7 +40,50 @@ spec:
     transforms.reroute.type: io.debezium.transforms.ByLogicalTableRouter
     transforms.reroute.topic.regex: (.*)
     transforms.reroute.topic.replacement: cdc.$1
+
+{{- if and (hasKey $db "partitions") (ge (len $db.partitions) 1) }}
+{{- range $partition := $db.partitions }}
+{{- $partitionSource := required "partition source is required" $partition.source }}
+{{- $partitionSink := required "partition sink is required" $partition.sink }}
+{{- $partitionConnectorName := lower (printf "%s-%s" $dbConnectorName $partitionSink) | replace "." "-" }}
+{{- $partitionSlotName := $partitionConnectorName | replace "-" "_" }}
+---
+apiVersion: kafka.strimzi.io/v1beta2
+kind: KafkaConnector
+metadata:
+  name: {{ $partitionConnectorName }}
+  labels:
+    strimzi.io/cluster: {{ $fullName }}
+spec:
+  class: io.debezium.connector.postgresql.PostgresConnector
+  tasksMax: 1
+  config:
+    database.hostname: {{ $db.hostname }}
+    database.port: "{{ $db.port | default 5432 }}"
+    database.user: "${env:POSTGRES_CDC_USER}"
+    database.password: "${env:POSTGRES_CDC_PASS}"
+    database.server.name: "{{ $db.servername }}"
+    database.dbname: "{{ $db.dbname }}"
+    snapshot.new.tables: parallel
+    slot.name: {{ $partitionSlotName }}
+    plugin.name: pgoutput
+    tasks.max: "1"
+    table.include.list: "{{ $partitionSource }}"
+    key.converter: io.confluent.connect.avro.AvroConverter
+    key.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
+    value.converter: io.confluent.connect.avro.AvroConverter
+    value.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
+    {{- if $db.signaling }}
+    signal.data.collection: debezium.signaling
+    {{- end }}
+    transforms: reroute
+    transforms.reroute.type: io.debezium.transforms.ByLogicalTableRouter
+    transforms.reroute.topic.regex: "^([^\\.]+)\\.([^\\.]+)\\..*"
+    transforms.reroute.topic.replacement: "cdc.$1.$2.{{ $partitionSink }}"
 {{- end }}
+{{- end }}
+{{- end }}
+
 ---
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaConnector
@@ -60,5 +110,5 @@ spec:
     transforms.unwrap.drop.tombstones: false
     transforms.unwrap.delete.handling.mode: rewrite
     transforms.rename.type: org.apache.kafka.connect.transforms.RegexRouter
-    transforms.rename.regex: "^cdc\\.(.*)\\.(.*)\\.(.*)"
+    transforms.rename.regex: "^cdc\\.([^\\.]*)\\.([^\\.]*)\\.([^\\.]*)"
     transforms.rename.replacement: "$1_$3"
